Added styling for buttons using mixins

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <li><a href="#">Features</a></li>
       <li><a href="#">Signup</a></li>
     </ul>
-    <button class="navigation__demo--btn">Request Demo <i class="fas fa-arrow-right"></i></button>
+    <button class="demo-btn">Request Demo <i class="fas fa-arrow-right"></i></button>
   </nav>
   <main>
     <section class="hero">
@@ -31,7 +31,7 @@
           <p>Data Warehouse is a data storage area that has been tested for security, 
             so you can store your data here safely but not be afraid of being stolen by others</p>
         </article>
-        <button class="hero__copy--btn">Learn More</button>
+        <button class="btn">Learn More</button>
       </section>
       <section class="hero__card">
         <div class="hero__card--img">
@@ -75,8 +75,8 @@
         <span class="footer__title--text">Get a limited one week free trial!</span>
       </section>
       <div>
-        <button>Learn More</button>
-        <button class="navigation__demo--btn">Request Demo</button>
+        <button class="btn">Learn More</button>
+        <button class="demo-btn">Request Demo <i class="fas fa-arrow-right"></i></button>
       </div>
       
     </section><!-- end footer area top -->
