--- a/src/index.html
+++ b/src/index.html
@@ -20,42 +20,47 @@
   </nav>
   <main>
     <section class="hero">
-      <div class="hero__img--container">
-        <!-- img rendered with js -->
-      </div>
-      <section class="hero__copy">
-        <div class="hero__copy--title">
-          <h1>Save your data storage here</h1>
-        </div>
-        <article class="hero__copy--text">
-          <p>Data Warehouse is a data storage area that has been tested for security, 
-            so you can store your data here safely but not be afraid of being stolen by others</p>
-        </article>
-        <button class="btn">Learn More</button>
-      </section>
-      <section class="hero__card">
-        <div class="hero__card--img">
+      <div class="hero__area--one">
+        <section class="hero__copy">
+          <div class="hero__copy--title">
+            <h1>Save your data storage here</h1>
+          </div>
+          <article class="hero__copy--text">
+            <p>Data Warehouse is a data storage area that has been tested for security,
+              so you can store your data here safely but not be afraid of being stolen by others</p>
+          </article>
+          <button class="btn">Learn More</button>
+        </section>
+        <div class="hero__img--container">
           <!-- img rendered with js -->
         </div>
-        <article class="hero__card--copy">
-          <div class="hero__card--title">
-            <h1>We are a high-level data storage bank</h1>
+      </div>
+      <div class="hero__area--two">
+        <section class="hero__card">
+          <div class="hero__card--img">
+            <!-- img rendered with js -->
           </div>
-          <div class="hero__card--text">
-            <p>The place to store various data you can access at any
-              time through the internet and where you can carry it.
-              This very flexible storage area has a high level of security.
-              To enter into your own data you must enter the password that you created
-              when you registered in this Data Warehouse.
-            </p>
-          </div>
-        </article>
-      </section>
+          <article class="hero__card--copy">
+            <div class="hero__card--title">
+              <h1>We are a high-level data storage bank</h1>
+            </div>
+            <div class="hero__card--text">
+              <p>The place to store various data you can access at any
+                time through the internet and where you can carry it.
+                This very flexible storage area has a high level of security.
+                To enter into your own data you must enter the password that you created
+                when you registered in this Data Warehouse.
+              </p>
+            </div>
+          </article>
+        </section>
+      </div>
     </section><!-- end hero section -->
     <section class="features">
       <div class="feature__text">
         <h2>Features</h2>
-        <span>Some of the features and advantages that we provide for those of you who store data in this Data Warehouse</span>
+        <p>Some of the features and advantages that we provide for those of you who store data in this Data
+          Warehouse</p>
       </div>
       <div class="feature__grid">
         <!-- using JS to generate the individual cards -->
@@ -78,12 +83,12 @@
         <button class="btn">Learn More</button>
         <button class="demo-btn">Request Demo <i class="fas fa-arrow-right"></i></button>
       </div>
-      
+
     </section><!-- end footer area top -->
     <section class="footer__area--bottom">
       <div class="column">
         <div class="footer__area--logo">
-            <h3>Data Warehouse</h3>
+          <h3>Data Warehouse</h3>
         </div>
         <div class="footer__area--info">
           <span>Warehouse Society, 234</span>
@@ -120,7 +125,7 @@
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
           </ul>
         </div>
-        
+
       </div>
     </section>
   </footer>
