Buttons: added active styles for navbar buttons

--- a/src/index.html
+++ b/src/index.html
@@ -67,9 +67,13 @@
       </div>
     </section><!-- end features section -->
     <section class="testimonials">
-      <h1>Testimonials</h1>
-      <div class="slider">
-
+      <h2>Testimonials</h2>
+      <div class="testimonials__content">
+        <div class="slider">
+            <div class="slider__container">
+              
+            </div>
+        </div>
       </div>
     </section>
   </main>
