Added: addtional btn stylings

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">Features</a></li>
         <li><a href="#">Signup</a></li>
       </ul>
-      <button class="demo-btn">Request Demo <i class="fas fa-arrow-right"></i></button>
+      <button class="demo-btn">Request Demo <span class="fas fa-arrow-right purple"></span></button>
     </div>
 
   </nav>
@@ -32,7 +32,7 @@
             <p>Data Warehouse is a data storage area that has been tested for security,
               so you can store your data here safely but not be afraid of being stolen by others</p>
           </article>
-          <button class="btn">Learn More</button>
+          <button class="header-btn">Learn More</button>
         </section>
         <div class="hero__img--container">
           <!-- img rendered with js -->
