ClipPath: trying out clip path for trapezoid feature cards

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
 <body>
   <nav class="navigation">
     <div class="navigation__container">
+      <div class="logo">
+        <div class="logo__image--one">
+        </div>
+        <div class="logo__image--two">
+        </div>
+      </div>
       <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Help</a></li>
