Fixed button and logo spacing on navbar

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,10 @@
         <li><a href="#">Features</a></li>
         <li><a href="#">Signup</a></li>
       </ul>
-      <button class="demo-btn">Request Demo <span class="fas fa-arrow-right purple"></span></button>
+      <div class="btn__container--navigation">
+        <button class="demo-btn">Request Demo</button>
+        <span class="fas fa-arrow-right purple"></span>
+      </div>
     </div>
 
   </nav>
