Styling footer section

--- a/src/index.html
+++ b/src/index.html
@@ -90,23 +90,29 @@
     </section>
   </main>
   <footer class="footer">
-    <section class="footer__area--top">
+    <section class="footer__top">
       <section class="footer__title">
         <h3>Try For Free</h3>
-        <span class="footer__title--text">Get a limited one week free trial!</span>
+        <span class="footer__text">Get a limited one week free trial!</span>
       </section>
-      <div>
+      <div class="footer__buttons">
         <button class="btn">Learn More</button>
-        <button class="demo-btn">Request Demo <i class="fas fa-arrow-right"></i></button>
+        <div class="btn__container">
+          <button class="demo-btn">Request Demo </button>
+          <span class="fas fa-arrow-right purple"></span>
+        </div>
       </div>
 
     </section><!-- end footer area top -->
-    <section class="footer__area--bottom">
+    <section class="footer__bottom">
       <div class="column">
-        <div class="footer__area--logo">
+        <div class="footer__logo">
           <h3>Data Warehouse</h3>
         </div>
-        <div class="footer__area--info">
+        <div class="footer__info">
+          <div class="footer__address">
+
+          </div>
           <span>Warehouse Society, 234</span>
           <span>Bahagia Ave Street PRBW 29281</span>
           <span>info@warehouse.project</span>
