Finalizing hero section

--- a/src/index.html
+++ b/src/index.html
@@ -11,18 +11,20 @@
 <body>
   <nav class="navigation">
     <div class="navigation__container">
-      <div class="logo">
-        <div class="logo__image--one">
+      <div class="navigation__inner">
+        <div class="logo">
+          <div class="logo__image--one">
+          </div>
+          <div class="logo__image--two">
+          </div>
         </div>
-        <div class="logo__image--two">
-        </div>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Help</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Signup</a></li>
+        </ul>
       </div>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Signup</a></li>
-      </ul>
       <div class="btn__container--navigation">
         <button class="demo-btn">Request Demo</button>
         <span class="fas fa-arrow-right purple"></span>
@@ -35,7 +37,7 @@
       <div class="hero__area--one">
         <section class="hero__copy">
           <div class="hero__copy--title">
-            <h1>Save your data storage here</h1>
+            <h1>Save your data storage here.</h1>
           </div>
           <article class="hero__copy--text">
             <p>Data Warehouse is a data storage area that has been tested for security,
@@ -80,13 +82,13 @@
     </section><!-- end features section -->
     <section class="slider">
       <h2>Testimonials</h2>
-        <div class="slider__container">
-          <!-- rendered with js -->
-        </div>
-        <div class="slider__controls">
-          <span class="previous"><i class="fas fa-arrow-left"></i></span>
-          <span class="next"><i class="fas fa-arrow-right"></i></span>
-        </div>
+      <div class="slider__container">
+        <!-- rendered with js -->
+      </div>
+      <div class="slider__controls">
+        <span class="previous"><i class="fas fa-arrow-left"></i></span>
+        <span class="next"><i class="fas fa-arrow-right"></i></span>
+      </div>
     </section>
   </main>
   <footer class="footer">
@@ -107,19 +109,26 @@
     <section class="footer__bottom">
       <div class="column">
         <div class="footer__logo">
+          <div class="logo">
+            <div class="footer__image--one logo__image--one">
+            </div>
+            <div class="footer__image--two logo__image--two">
+            </div>
+          </div>
           <h3>Data Warehouse</h3>
         </div>
         <div class="footer__info">
           <div class="footer__address">
-
+            <span>Warehouse Society, 234</span>
+            <span>Bahagia Ave Street PRBW 29281</span>
           </div>
-          <span>Warehouse Society, 234</span>
-          <span>Bahagia Ave Street PRBW 29281</span>
-          <span>info@warehouse.project</span>
-          <span>1-232-3434 (Main)</span>
+          <div class="footer__email">
+            <span>info@warehouse.project</span>
+            <span>1-232-3434 (Main)</span>
+          </div>
         </div>
       </div>
-      <div class="column">
+      <div class="column about">
         <h5>About</h5>
         <ul>
           <li><a href="#">Profile</a></li>
@@ -128,7 +137,7 @@
           <li><a href="#">DW News</a></li>
         </ul>
       </div>
-      <div class="column">
+      <div class="column help">
         <h5>Help</h5>
         <ul>
           <li><a href="#">Support</a></li>
@@ -138,15 +147,13 @@
           <li><a href="#">Q&#38;A</a></li>
         </ul>
       </div>
-      <div class="column">
+      <div class="column social">
         <h5>Social</h5>
         <ul class="row">
           <li><a href="#"><i class="fab fa-twitter"></i></a></li>
           <li><a href="#"><i class="fab fa-facebook"></i></a></li>
           <li><a href="#"><i class="fab fa-instagram"></i></a></li>
         </ul>
-
-
       </div>
     </section>
   </footer>
