MobileStyles: refactoring some components to better fit mobile devices

--- a/src/index.html
+++ b/src/index.html
@@ -148,11 +148,11 @@
         </ul>
       </div>
       <div class="column social">
-        <h5>Social</h5>
+        <h5>Social Media</h5>
         <ul class="row">
-          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+          <li><a href="#"><span class="fab fa-facebook"></span></a></li>
+          <li><a href="#"><span class="fab fa-instagram"></span></a></li>
         </ul>
       </div>
     </section>
