Fixed mobile styles with flexbox

--- a/src/index.html
+++ b/src/index.html
@@ -33,130 +33,133 @@
 
   </nav>
   <main>
-    <section class="hero">
-      <div class="hero__area--one">
-        <section class="hero__copy">
-          <div class="hero__copy--title">
-            <h1>Save your data storage here.</h1>
-          </div>
-          <article class="hero__copy--text">
-            <p>Data Warehouse is a data storage area that has been tested for security,
-              so you can store your data here safely but not be afraid of being stolen by others</p>
-          </article>
-          <button class="header-btn">Learn More</button>
-        </section>
-        <div class="hero__img--container">
-          <!-- img rendered with js -->
-        </div>
-      </div>
-      <div class="hero__area--two">
-        <section class="hero__card">
-          <div class="hero__card--img">
+    <div class="content__container">
+      <section class="hero">
+        <div class="hero__area--one">
+          <section class="hero__copy">
+            <div class="hero__copy--title">
+              <h1>Save your data storage here.</h1>
+            </div>
+            <article class="hero__copy--text">
+              <p>Data Warehouse is a data storage area that has been tested for security,
+                so you can store your data here safely but not be afraid of being stolen by others</p>
+            </article>
+            <button class="header-btn">Learn More</button>
+          </section>
+          <div class="hero__img--container">
             <!-- img rendered with js -->
           </div>
-          <article class="hero__card--copy">
-            <div class="hero__card--title">
-              <h1>We are a high-level data storage bank</h1>
+        </div>
+        <div class="hero__area--two">
+          <section class="hero__card">
+            <div class="hero__card--img">
+              <!-- img rendered with js -->
             </div>
-            <div class="hero__card--text">
-              <p>The place to store various data you can access at any
-                time through the internet and where you can carry it.
-                This very flexible storage area has a high level of security.
-                To enter into your own data you must enter the password that you created
-                when you registered in this Data Warehouse.
-              </p>
-            </div>
-          </article>
-        </section>
-      </div>
-    </section><!-- end hero section -->
-    <section class="features">
-      <div class="feature__text">
-        <h2>Features</h2>
-        <p>Some of the features and advantages that we provide for those of you who store data in this Data
-          Warehouse</p>
-      </div>
-      <div class="feature__grid">
-        <!-- using JS to generate the individual cards -->
-      </div>
-    </section><!-- end features section -->
-    <section class="slider">
-      <h2>Testimonials</h2>
-      <div class="slider__container">
-        <!-- rendered with js -->
-      </div>
-      <div class="slider__controls">
-        <span class="previous"><i class="fas fa-arrow-left"></i></span>
-        <span class="next"><i class="fas fa-arrow-right"></i></span>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <section class="footer__top">
-      <section class="footer__title">
-        <h3>Try For Free</h3>
-        <span class="footer__text">Get a limited one week free trial!</span>
+            <article class="hero__card--copy">
+              <div class="hero__card--title">
+                <h1>We are a high-level data storage bank</h1>
+              </div>
+              <div class="hero__card--text">
+                <p>The place to store various data you can access at any
+                  time through the internet and where you can carry it.
+                  This very flexible storage area has a high level of security.
+                  To enter into your own data you must enter the password that you created
+                  when you registered in this Data Warehouse.
+                </p>
+              </div>
+            </article>
+          </section>
+        </div>
+      </section><!-- end hero section -->
+      <section class="features">
+        <div class="feature__text">
+          <h2>Features</h2>
+          <p>Some of the features and advantages that we provide for those of you who store data in this Data
+            Warehouse</p>
+        </div>
+        <div class="feature__grid">
+          <!-- using JS to generate the individual cards -->
+        </div>
+      </section><!-- end features section -->
+      <section class="slider">
+        <h2>Testimonials</h2>
+        <div class="slider__container">
+          <!-- rendered with js -->
+        </div>
+        <div class="slider__controls">
+          <span class="previous"><i class="fas fa-arrow-left"></i></span>
+          <span class="next"><i class="fas fa-arrow-right"></i></span>
+        </div>
       </section>
-      <div class="footer__buttons">
-        <button class="btn">Learn More</button>
-        <div class="btn__container">
-          <button class="demo-btn">Request Demo </button>
-          <span class="fas fa-arrow-right purple"></span>
+    </main>
+    <footer class="footer">
+      <section class="footer__top">
+        <section class="footer__title">
+          <h3>Try For Free</h3>
+          <span class="footer__text">Get a limited one week free trial!</span>
+        </section>
+        <div class="footer__buttons">
+          <button class="btn">Learn More</button>
+          <div class="btn__container">
+            <button class="demo-btn">Request Demo </button>
+            <span class="fas fa-arrow-right purple"></span>
+          </div>
         </div>
-      </div>
-
-    </section><!-- end footer area top -->
-    <section class="footer__bottom">
-      <div class="column">
-        <div class="footer__logo">
-          <div class="logo">
-            <div class="footer__image--one logo__image--one">
+  
+      </section><!-- end footer area top -->
+      <section class="footer__bottom">
+        <div class="column">
+          <div class="footer__logo">
+            <div class="logo">
+              <div class="footer__image--one logo__image--one">
+              </div>
+              <div class="footer__image--two logo__image--two">
+              </div>
             </div>
-            <div class="footer__image--two logo__image--two">
+            <h3>Data Warehouse</h3>
+          </div>
+          <div class="footer__info">
+            <div class="footer__address">
+              <span>Warehouse Society, 234</span>
+              <span>Bahagia Ave Street PRBW 29281</span>
+            </div>
+            <div class="footer__email">
+              <span>info@warehouse.project</span>
+              <span>1-232-3434 (Main)</span>
             </div>
           </div>
-          <h3>Data Warehouse</h3>
         </div>
-        <div class="footer__info">
-          <div class="footer__address">
-            <span>Warehouse Society, 234</span>
-            <span>Bahagia Ave Street PRBW 29281</span>
-          </div>
-          <div class="footer__email">
-            <span>info@warehouse.project</span>
-            <span>1-232-3434 (Main)</span>
-          </div>
+        <div class="column about">
+          <h5>About</h5>
+          <ul>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">DW News</a></li>
+          </ul>
         </div>
-      </div>
-      <div class="column about">
-        <h5>About</h5>
-        <ul>
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">DW News</a></li>
-        </ul>
-      </div>
-      <div class="column help">
-        <h5>Help</h5>
-        <ul>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Sign up</a></li>
-          <li><a href="#">Guide</a></li>
-          <li><a href="#">Reports</a></li>
-          <li><a href="#">Q&#38;A</a></li>
-        </ul>
-      </div>
-      <div class="column social">
-        <h5>Social Media</h5>
-        <ul class="row">
-          <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-          <li><a href="#"><span class="fab fa-facebook"></span></a></li>
-          <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-        </ul>
-      </div>
-    </section>
-  </footer>
+        <div class="column help">
+          <h5>Help</h5>
+          <ul>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Sign up</a></li>
+            <li><a href="#">Guide</a></li>
+            <li><a href="#">Reports</a></li>
+            <li><a href="#">Q&#38;A</a></li>
+          </ul>
+        </div>
+        <div class="column social">
+          <h5>Social Media</h5>
+          <ul class="row">
+            <li><a href="#"><span class="fab fa-twitter"></span></a></li>
+            <li><a href="#"><span class="fab fa-facebook"></span></a></li>
+            <li><a href="#"><span class="fab fa-instagram"></span></a></li>
+          </ul>
+        </div>
+      </section>
+    </footer>
+    </div>
+    
   <script src="https://kit.fontawesome.com/7e8ea69633.js" crossorigin="anonymous"></script>
 </body>
 
